--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -25,7 +25,7 @@
                 "clientSecretSettingName": "AADB2C_PROVIDER_CLIENT_SECRET"
               },
               "openIdConnectConfiguration": {
-                "wellKnownOpenIdConfiguration": "https://fashionappdemo.b2clogin.com/fashionappdemo.onmicrosoft.com/B2C_1_susi/v2.0/.well-known/openid-configuration"
+                "wellKnownOpenIdConfiguration": "https://fashiondemo.b2clogin.com/fashiondemo.onmicrosoft.com/B2C_1_susi/v2.0/.well-known/openid-configuration"
               }
             },
             "login": {
