--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -29,7 +29,7 @@
               }
             },
             "login": {
-              "nameClaimType": "Email Addresses",
+              "nameClaimType": "emails",
               "scopes": ["openid"]
             }
           }
